Projects/httpd-pod/Ingress/nginx-ingress-service.yml
apiVersion: v1
kind: Service
metadata: 
   name: nginx-ingress
spec: 
   type: NodePort
   ports: 
   - port: 80
     targetPort: 80
     protocol: TCP
     name: http
   - port: 443
     targetPort: 443
     protocol: TCP
     name: https
     
   selector:
     name: nginx-ingress
