Projects/httpd-pod/Ingress/web-service-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-wear
spec: 
  backend: 
     serviceName: web-service
	 servicePort: 30010
